force-app/main/default/objects/Timesheet__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the manager who approved the timesheet.</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>