force-app/main/default/objects/Timesheet__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Captures when the timesheet was approved.</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>