force-app/main/default/objects/Timesheet__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <description>Calculates total billable hours from time entries.</description>
    <inlineHelpText>It calculates the total billable hours</inlineHelpText>
    <label>Billable Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Billable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>