force-app/main/default/objects/Timesheet__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <description>Automatically set to TRUE when status = Approved to prevent further edits.</description>
    <formula>ISPICKVAL(Status__c , &quot;Approved&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It automatically set TRUE when status has been approved to prevent further edits</inlineHelpText>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>