force-app/main/default/objects/Timesheet__c/fields/Non_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Hours__c</fullName>
    <description>Calculates total non-billable hours for reporting.</description>
    <label>Non Billable Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Time_Entry__c.Billable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Time_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>