force-app/main/default/objects/Timesheet__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Mandatory when status is Rejected. Stores manager comments.</description>
    <inlineHelpText>It defines the reason of the rejection of your timesheet</inlineHelpText>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>