force-app/main/default/objects/Timesheet__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Identifies the employee who logged the time. Used for approval routing and reporting.</description>
    <inlineHelpText>It tells about the candidate of the timesheet</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>