force-app/main/default/objects/Timesheet__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Captures the date and time when the timesheet was submitted.</description>
    <inlineHelpText>It tells about the capture date when timesheet has submitted</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>