force-app/main/default/objects/Timesheet__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <description>Automatically calculates total hours logged in the week.</description>
    <label>Total Hours</label>
    <summarizedField>Time_Entry__c.Hours__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>