force-app/main/default/objects/Timesheet__c/fields/Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date__c</fullName>
    <description>Defines the ending date of the reporting week. Used for validation and reporting.</description>
    <inlineHelpText>It defines the deadline of the of the end week</inlineHelpText>
    <label>Week End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>