force-app/main/default/objects/Timesheet__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <description>Defines the starting date of the reporting week. Prevents duplicate weekly entries.</description>
    <inlineHelpText>It defines the starting week date of the timesheet</inlineHelpText>
    <label>Week Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>