force-app/main/default/objects/Timesheet__c/recordTypes/Time_Materials.recordType-meta.xml
<RecordType>
    <fullName>Time_Materials</fullName>
    <active>true</active>
    <description>Bill by the hour using billable rates</description>
    <label>Time &amp; Materials</label>
</RecordType>