force-app/main/default/objects/Timesheet__c/validationRules/Lock_After_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_After_Approval</fullName>
    <active>true</active>
    <description>Prevent edit from user when Status has been Approved</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Approved&quot;),
    NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>This Timesheet is Approved and cannot be modified.</errorMessage>
</ValidationRule>