force-app/main/default/objects/Timesheet__c/validationRules/Lock_record_if_status_is_submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_record_if_status_is_submitted</fullName>
    <active>false</active>
    <description>If candidate submitted timesheet, then lock the record from being edited. only status changes are allowed.</description>
    <errorConditionFormula>AND(

    /* Record was already in Submitted status */
    ISPICKVAL(PRIORVALUE(Status__c), &quot;Submitted&quot;),

    /* Allow ONLY change to Approved or Rejected */
    NOT(
        OR(
            ISPICKVAL(Status__c, &quot;Approved&quot;),
            ISPICKVAL(Status__c, &quot;Rejected&quot;)
        )
    )

)</errorConditionFormula>
    <errorMessage>You can modify record once it is Submitted. Only Approved/Rejected options are allowed.</errorMessage>
</ValidationRule>