force-app/main/default/objects/Timesheet__c/validationRules/Rejection_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_reason_required</fullName>
    <active>true</active>
    <description>If Status has Rejected than Rejection Reason must be filled</description>
    <errorConditionFormula>AND(
   ISCHANGED(Status__c),
   ISPICKVAL(Status__c , &quot;Rejected&quot;),
   ISBLANK( Rejection_Reason__c )
)</errorConditionFormula>
    <errorMessage>Please provide a rejection reason before rejecting the timesheet.</errorMessage>
</ValidationRule>