force-app/main/default/objects/Timesheet__c/validationRules/Weekly_Hour_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Weekly_Hour_Limit</fullName>
    <active>true</active>
    <description>It will ensure that weekly hours are less than  60 hours.</description>
    <errorConditionFormula>Total_Hours__c &gt; 60</errorConditionFormula>
    <errorMessage>Total weekly hours cannot exceed 60 hours.</errorMessage>
</ValidationRule>